# no-monoliticas-entrega-4-5

./: .coveragerc  .gitpod.yml  README.md  clientes.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  sidecar-aeroalpes.yml  ui-requirements.txt  uowc.pkl  uowi.pkl  uowp.pkl  uows.pkl
colecciones/: EntregaFinal.postman_collection.json
src/clientes/: Dockerfile
src/clientes/api/: __init__.py  clientes.py
src/clientes/config/: db.py  uow.py
src/clientes/seedwork/infraestructura/: uow.py
src/inquilinos/: Dockerfile
src/inquilinos/api/: __init__.py  inquilinos.py
src/inquilinos/config/: db.py  uow.py
src/inquilinos/seedwork/dominio/: entidades.py
src/inquilinos/seedwork/infraestructura/: uow.py
src/notificaciones/: main.py
src/propiedades/: Dockerfile
src/propiedades/api/: __init__.py  propiedades.py
src/propiedades/config/: db.py  uow.py
src/propiedades/seedwork/dominio/: objetos_valor.py
src/propiedades/seedwork/infraestructura/: uow.py
src/sagas/api/: __init__.py  sagas.py
src/sagas/config/: db.py  uow.py
src/sagas/seedwork/aplicacion/: sagas.py
src/sagas/seedwork/dominio/: entidades.py  objetos_valor.py
src/sidecar/: Dockerfile  cliente.py  main.py
src/sidecar/mensajes/: crear_cliente.json
src/sidecarInquilinos/: Dockerfile  cliente.py  main.py
src/sidecarInquilinos/mensajes/: crear_inquilino.json
src/sidecarPropiedades/: Dockerfile  cliente.py  main.py
src/sidecarPropiedades/mensajes/: crear_propiedad.json
src/ui/: main.py
src/ui/clientes/: consumidor.py  publicador.py
tests/unit/api/: test_api.py
(+131 files in other folders)
